@@ -161,7 +161,7 @@ static void InitServer() {
     /* get encryption key for authentication */
     tokfile = fopen(VolTKFile, "r");
     memset(vkey, 0, RPC2_KEYSIZE);
-    read(tokfile, vkey, RPC2_KEYSIZE);
+    fread(vkey, 1, RPC2_KEYSIZE, tokfile);
     fclose(tokfile);
 
     subsysid.Tag = RPC2_SUBSYSBYID;
